// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Array.prototype.findIndex should not import polyfill more than once 1`] = `
"import _Array_prototype_findIndex from 'babel-plugin-transform-polyfills/polyfills/Array/prototype/findIndex';

const list = [1, 2, 3, 4, 5];
if (_Array_prototype_findIndex(list, n => n === 3) === 2) {
  console.log(_Array_prototype_findIndex(list, 3));
} else {
  console.log('failure');
}"
`;

exports[`Array.prototype.findIndex should replace Array.prototype.findIndex with a polyfill 1`] = `
"import _Array_prototype_findIndex from 'babel-plugin-transform-polyfills/polyfills/Array/prototype/findIndex';

const list = [1, 2, 3, 4, 5];
if (_Array_prototype_findIndex(list, n => n === 3) === 2) {
  console.log('success');
} else {
  console.log('failure');
}"
`;

exports[`Array.prototype.findIndex should work when part of a call chain 1`] = `
"import _Array_prototype_findIndex from 'babel-plugin-transform-polyfills/polyfills/Array/prototype/findIndex';

const list = [1, 2, 3, 4, 5];
if (_Array_prototype_findIndex(list.slice(2), n => n === 3) === 0) {
  console.log('success');
} else {
  console.log('failure');
}"
`;
